--- a/src/component/tableau/tableau.component.scss
+++ b/src/component/tableau/tableau.component.scss
@@ -2,3 +2,27 @@
     background-color: #64b5f6;
     text-align: center;
 }
+
+.sticky_cell {
+    position: sticky;
+}
+
+.joueur_cell {
+    display: flex;
+    align-items: center;
+
+    img {
+        width: 30%;
+        border-radius: 50%;
+    }
+}
+
+.MuiTableCell-head {
+    background-color: #64b5f6;
+}
+
+.MuiTableCell-body {
+    background-color: white;
+}
+
+
